--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^5.4.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
+		"@tsparticles/engine": "^3.3.0",
+		"@tsparticles/react": "^3.0.0",
+		"@tsparticles/slim": "^3.3.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.31",
 		"lucide-react": "^0.436.0",
 		"next": "14.2.7",
 		"next-themes": "^0.3.0",
+		"next-view-transitions": "^0.3.0",
+		"nextjs-toploader": "^3.6.15",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.5.2",
-		"tailwindcss-animate": "^1.0.7",
-		"@tsparticles/engine": "^3.3.0",
-		"@tsparticles/react": "^3.0.0",
-		"@tsparticles/slim": "^3.3.0"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
