--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@clerk/nextjs": "^5.4.1",
 		"@hookform/resolvers": "^3.9.0",
+		"@prisma/client": "^5.19.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
@@ -41,6 +42,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"postcss": "^8",
+		"prisma": "^5.19.1",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
