--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"@tsparticles/engine": "^3.3.0",
 		"@tsparticles/react": "^3.0.0",
 		"@tsparticles/slim": "^3.3.0",
+		"@uploadcare/blocks": "^0.50.4",
+		"@uploadcare/file-uploader": "^1.6.0",
+		"@uploadcare/react-uploader": "^1.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.31",
@@ -32,6 +35,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.53.0",
+		"sass": "^1.78.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.23.8"
